# ciso-rs

./: Cargo.toml  LICENSE  README.md
crates/ciso/: Cargo.toml
crates/ciso-rs/: Cargo.toml
crates/ciso-rs/benches/: ciso.rs
crates/ciso-rs/src/: check.rs  ciso_header.rs  compress.rs  decompress.rs  lib.rs
crates/ciso-rs/tests/: ciso_roundtrip.rs
crates/ciso/src/: args.rs  main.rs
