
[package]
name = "ciso"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
ciso-rs.workspace = true
# byteorder = "1.5.0"
# crossbeam = "0.8.4"
# flate2 = "1.1.5"
# memmap2 = "0.9.9"
# num_cpus = "1.17.0"
# parking_lot = "0.12.5"
